# aat-internal-portal

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  celerybeat-schedule  pyproject.toml  requirements.txt  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: 22b22f5e801b_knowledge_rich_content_and_attachments.py  25740ed491e4_add_knowledge_category_visibility.py  2e20b27d0159_chat_multiroom_and_attachments.py  3109e0731988_add_description_to_departments.py  4b59b4b046e8_initial_clean_schema.py  5f827c66ff1f_add_department_parent_id.py  69270e7092bf_add_department_chats.py  7c8d9e0f1a2b_add_chat_read_states.py  8d31a4c2f9b1_chat_pin_state_and_message_statuses.py  9b1f0f6f7c2a_add_refresh_token_sessions.py  9f42d7ab31ce_add_unread_chat_email_notification_flag.py  df812f1ae709_fix_department_chats_schema.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  seed.py
backend/app/admin/: models.py  router.py  schemas.py  service.py
backend/app/announcements/: models.py  router.py  schemas.py  service.py
backend/app/auth/: jwt.py  models.py  router.py  schemas.py  service.py
backend/app/chat/: manager.py  models.py  notifications.py  router.py  schemas.py  service.py
backend/app/dashboard/: router.py
backend/app/departments/: models.py  router.py  schemas.py  service.py
backend/app/employees/: models.py  router.py  schemas.py  service.py
backend/app/knowledge/: models.py  router.py  schemas.py  service.py
backend/app/middleware/: rate_limit.py  (+1 more)
(+72 files in other folders)
